Update title to v4.7 and add expand button
Updated the title to version 4.7 and added a button to expand form fields.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ALERT Nursing Risk Assessment Tool v4.6</title>
+  <title>ALERT Nursing Risk Assessment Tool v4.7</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -646,6 +646,10 @@
             <textarea id="context_other_note" placeholder="Hometeam plan, other notes"></textarea>
         </div>
     </div>
+  </div>
+
+  <div id="expandFormBtn">
+      <span>[ + ] Show All Fields</span>
   </div>
 
   <div class="card">
