--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ALERT Nursing Risk Assessment Tool v5.5</title>
+  <title>ALERT Nursing Risk Assessment Tool v5.6</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -34,15 +34,15 @@
         <label>Review Type</label>
         <div style="display:flex; gap:8px; padding-top:6px;">
           <label style="font-weight:500"><input type="radio" name="reviewType" value="pre"> Pre-Stepdown</label>
-          <label style="font-weight:500"><input type="radio" name="reviewType" value="post"> Post-Stepdown</label>
-          <label style="font-weight:500; color:var(--accent);"><input type="radio" name="reviewType" value="followup" checked> Follow-up</label>
+          <label style="font-weight:500; color:var(--accent);"><input type="radio" name="reviewType" value="post" checked> Post-Stepdown</label>
+          <label style="font-weight:500;"><input type="radio" name="reviewType" value="followup"> Follow-up</label>
         </div>
       </div>
 
       <div class="col-12" id="dmrPasteWrapper">
           <div class="paste-box">
             <div class="section-title" style="color:var(--accent); margin-bottom:4px;">📋 Import Previous Note</div>
-            <label style="font-size:0.85rem;">Paste previous ALERT Summary here to compare risks and bloods.</label>
+            <label style="font-size:0.85rem;">Copy last note from DMR here</label>
             <textarea id="dmrPasteInput" placeholder="Paste text here..." style="min-height:80px; font-family:monospace; font-size:0.85rem;"></textarea>
             <div style="display:flex; justify-content:space-between; margin-top:8px;">
                 <span id="pasteError" style="color:var(--red); font-size:0.85rem; display:none; font-weight:600; align-self:center;">Invalid Format</span>
