--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ALERT Nursing Risk Assessment Tool v5.7</title>
+  <title>ALERT Nursing Risk Assessment Tool v5.8</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -34,8 +34,7 @@
         <label>Review Type</label>
         <div style="display:flex; gap:8px; padding-top:6px;">
           <label style="font-weight:500"><input type="radio" name="reviewType" value="pre"> Pre-Stepdown</label>
-          <label style="font-weight:500; color:var(--accent);"><input type="radio" name="reviewType" value="post" checked> Post-Stepdown</label>
-          <label style="font-weight:500;"><input type="radio" name="reviewType" value="followup"> Follow-up</label>
+          <label style="font-weight:500; color:var(--accent);"><input type="radio" name="reviewType" value="post" checked> Post-Stepdown / Follow-up</label>
         </div>
       </div>
 
